fix: layout bug

--- a/public/styles/today.css
+++ b/public/styles/today.css
@@ -34,6 +34,7 @@ h1 {
 
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 }
 
 .metas,
